# FlipperZero-CustomFirmware

./: .bandit  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  HELP.md  Makefile  QUICK_REFERENCE.md  README.md  WORKFLOW_OPTIMIZATION_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help_question.yml
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml
applications_user/autostart_test/: application.fam  autostart_test.c
build_configs/: fbt_options.py
database/: CHANGELOG.md  README.md
docs/: APPLICATION_DEVELOPMENT.md  FAQ.md  QUICK_START.md  README.md
